--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.1.5",
-        "date-fns": "^3.6.0"
+        "@tiptap/pm": "^2.5.5",
+        "@tiptap/starter-kit": "^2.5.5",
+        "@tiptap/vue-3": "^2.5.5",
+        "date-fns": "^3.6.0",
+        "tiptap-markdown": "^0.8.10"
     }
 }
