--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@heroicons/vue": "^2.1.5",
         "@tiptap/extension-link": "^2.5.5",
+        "@tiptap/extension-placeholder": "^2.5.6",
         "@tiptap/pm": "^2.5.5",
         "@tiptap/starter-kit": "^2.5.5",
         "@tiptap/vue-3": "^2.5.5",
